# aldolrxnmaster

./: .gitignore  CHANGELOG.md  CLAUDE.md  ISSUES.md  LESSONS.md  MODEL_REGISTRY.md  REPRODUCE.md  RESULTS.md  STRUCTURE.md  TODO.md  environment.yml  pyproject.toml
chiralaldol/: README.md  __init__.py  ald_cip_priority.py  aldehyde_steric.py  config.py  conformer_sampler.py  data_io.py  enolate_generator.py  face_steric_map.py  feature_builder.py  feature_registry.py  model_trainers.py  pairwise_builder.py  product_steric.py  qts_builder.py  solvent_lookup.py  spms.py  spms_compressor.py  stereo_enumerator.py  steric_descriptors.py  utils.py  xtb_descriptors.py  ze_enolate_generator.py  zt_3d_coords.py  zt_features.py  zt_graph_builder.py
literature/: optimization_analysis.md  phase1_phase2_summary.md  prompt.md  quick_scan_30papers.md  reading_guide.md  sota_stereo_prediction_2022_2026.md
scripts/: 03_run_cleaning.py  analyze_mech_to_cip.py  build_denoised_labels.py  diag_factorize_combine.py  diag_label_structure.py  generate_3d_conformers.py  precompute_chem_fps.py  rebuild_comparison.py  run_all_models.py  run_all_models_v3.py  run_all_models_v4.py  run_aux_models.py  run_aux_models_v4.py  run_auxchiral.py  run_benchmark.py  run_benchmark_evans.py  run_benchmark_full.py  run_benchmark_v4_full.py  run_build_graphs.py  run_build_zt_graphs.py  run_carbinol_gate.py  run_chem_space_audit.py  run_chemahnet.py  run_chemprop.py  run_chemprop_v4.py  run_chienn_product.py  run_chiralaldol.py  run_chiralaldol_pipeline.py  run_comparison.py  run_data_audit.py  run_features.py  (+37 more)
(+1586 files in other folders)
