[project]
name = "aldolrxnmaster"
version = "0.1.0"
description = "Stereochemistry prediction for asymmetric aldol reactions — comprehensive SOTA benchmark"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
